--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fs-app-template",
+  "name": "hyroxtrack",
   "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "prepping for Hyrox",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
