--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "react-calendar": "^4.0.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "victory": "^36.6.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
