--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "pg": "^8.5.1",
     "react-calendar": "^4.0.0",
