--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   "license": "MIT",
   "dependencies": {
     "@tensorflow/tfjs": "^4.14.0",
+    "aws-sdk": "^2.1543.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
+    "dotenv": "^16.4.1",
     "express": "^4.16.4",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "pg": "^8.5.1",
     "react-calendar": "^4.0.0",
