--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 S3_BUCKET_NAME=hyroxtrack
 # AWS_DEFAULT_REGION=us-east-1
+AWS_ACCESS_KEY_ID=AKIA2UC3BBFT6HC6AZFF
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-2
