--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.499.0",
     "@tensorflow/tfjs": "^4.14.0",
     "aws-sdk": "^2.1543.0",
     "axios": "^1.6.2",
